# swagger/ui/space.swagger.json
@@ -65,6 +65,38 @@
         ]
       }
     },
+    "/v1/backup/restore": {
+      "post": {
+        "operationId": "SpaceApi_BucketBackupRestore",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/spaceBucketBackupRestoreResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/spaceBucketBackupRestoreRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SpaceApi"
+        ]
+      }
+    },
     "/v1/buckets": {
       "get": {
         "operationId": "SpaceApi_ListBuckets",
@@ -1447,6 +1479,17 @@
         }
       }
     },
+    "spaceBucketBackupRestoreRequest": {
+      "type": "object",
+      "properties": {
+        "bucket": {
+          "type": "string"
+        }
+      }
+    },
+    "spaceBucketBackupRestoreResponse": {
+      "type": "object"
+    },
     "spaceBucketMember": {
       "type": "object",
       "properties": {
@@ -1864,6 +1907,10 @@
           }
         },
         "isBackupInProgress": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "isRestoreInProgress": {
           "type": "boolean",
           "format": "boolean"
         }
